# honours-project-code

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  tsconfig.json
client/: package-lock.json  package.json
client/src/: extension.ts
html_files/: test.html
src/: bhc_commands.rs  error.rs  file.rs  html.rs  logging.rs  main.rs  memory.rs  metadata.rs  workspace.rs
src/css/: css_commands.rs
src/file/: file_commands.rs
src/html/: html_commands.rs
src/lexer/html/: lexer.rs
src/metadata/: css_metadata.rs  file_metadata.rs  html_metadata.rs  workspace_metadata.rs
src/metadata/css_metadata/: css_attribute.rs  css_file.rs  css_style.rs
src/metadata/workspace_metadata/: workspace_css_file.rs  workspace_html_file.rs
vscode_extension/: package.json  tsconfig.json
vscode_extension/better-html-and-css-support/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
vscode_extension/client/: package.json  tsconfig.json
vscode_extension/client/src/: extension.ts
vscode_extension/server/: Cargo.toml
vscode_extension/server/src/: main.rs  server.ts
vscode_extension/src/: css.rs
