[package]
name = "bhc-language-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
env_logger="0.9.0"
html5gum = "0.5.7"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
serde = "1.0.197"
serde_json = "1.0"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = {version = "1.36.0", features = ["full"]}
tokio-test = "0.4.3"
cssparser = "0.33.0"